# Silencer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  docker-compose.yml  package.json  resources.rc  vcpkg.json  zSILENCER-Info.plist
.github/workflows/: CLAUDE.md  ci-build-linux.yml  (+11 more)
clients/lobby-sdk/cpp/: CLAUDE.md  CMakeLists.txt
clients/lobby-sdk/cpp/examples/: chat_listener.cpp
clients/lobby-sdk/cpp/include/silencer/lobby/: client.h  codec.h  types.h
clients/lobby-sdk/cpp/src/: client.cpp  codec.cpp  sha1.cpp
clients/lobby-sdk/cpp/tests/: codec_test.cpp
clients/silencer/: CLAUDE.md  CMakeLists.txt  Silencer-Info.plist  resources.rc  silencer.desktop  vcpkg.json
clients/silencer/cmake/: CompileShaders.cmake  msvc_snprintf_compat.h
clients/silencer/shaders/: comp_particle.hlsl  frag_light.hlsl  frag_particle.hlsl  frag_remap.hlsl  frag_upscale.hlsl  vert_particle.hlsl  vert_screen.hlsl
clients/silencer/src/: actordef.cpp  actordef.h  audio.cpp  behaviortree.cpp  behaviortree.h  bodypart.cpp  civilian.cpp  config.cpp  config.h  controldispatch.cpp  controldispatch.h  controlserver.cpp  controlserver.h  game.cpp  game.h  guard.cpp  guard.h  hittable.h  interface.cpp  interface.h  lobby.cpp  lobby.h  main.cpp  map.cpp  map.h  mapfetch.cpp  os.cpp  palette.cpp  player.cpp  player.h  renderdevice.h  renderer.cpp  replay.cpp  replay.h  resources.cpp  robot.cpp  robot.h  sdl3gpubackend.cpp  sdl3gpubackend.h  selectbox.cpp  (+8 more)
clients/silencer/src/actors/: actordef.cpp  actordef.h  bipedal.cpp  bodypart.cpp  bodypart.h  civilian.cpp  civilian.h  guard.cpp  guard.h  player.cpp  player.h  playerai.cpp  playerai.h  robot.cpp  robot.h
clients/silencer/src/audio/: audio.cpp  audio.h
clients/silencer/src/game/: game.cpp  game.h  team.cpp  team.h  user.cpp  user.h
clients/silencer/src/gas/: gasloader.cpp  gasloader.h  weaponfactory.cpp  weaponfactory.h
clients/silencer/src/input/: keybinds.cpp  keybinds.h
clients/silencer/src/net/: controldispatch.cpp  controlserver.cpp  dedicatedserver.cpp  dedicatedserver.h  inputserver.cpp  inputserver.h  mapfetch.cpp  mapfetch.h
clients/silencer/src/objects/: basedoor.cpp  baseexit.cpp  detonator.cpp  fixedcannon.cpp  pickup.cpp  vent.cpp  walldefense.cpp  warper.cpp
clients/silencer/src/platform/: config.cpp  config.h  os.cpp
clients/silencer/src/projectiles/: blasterprojectile.cpp  flamerprojectile.cpp  flamerprojectile.h  flareprojectile.cpp  flareprojectile.h  grenade.cpp  laserprojectile.cpp  plasmaprojectile.cpp  projectile.cpp  rocketprojectile.cpp  shrapnel.cpp  wallprojectile.cpp
clients/silencer/src/render/: renderdevice.h  renderer.cpp  renderer.h  tuibackend.cpp  tuibackend.h
clients/silencer/src/resources/: resources.cpp  resources.h
clients/silencer/src/stations/: creditmachine.cpp  healmachine.cpp  techstation.cpp  terminal.cpp
clients/silencer/src/ui/: button.cpp  interface.cpp  overlay.cpp  overlay.h
clients/silencer/src/updater/: updaterstage2.cpp
clients/silencer/src/world/: hittable.cpp  map.cpp  map.h  world.cpp  world.h
data/: CLAUDE.md
designer/: readme.html  web-designer.html
docs/: bot-ai.md  design-system.md  design-system.md.archive  lighting-system.md  network-audit.md  production.md  silencer-client-architecture.md
infra/: docker-compose.yml
scripts/: build-mac-local.sh  fastdeploy.sh  install-linux-server.sh  test-updater.ps1  test-updater.sh
server/: CLAUDE.md  Dockerfile  README.md  client.go  discord.go  discord_test.go  events.go  go.mod  go.sum  hub.go  main.go  mongosync.go  playerauth.go  proc.go  protocol.go  protocol_test.go  store.go  udp.go
shared/design/raylib/: CLAUDE.md  CMakeLists.txt
shared/design/raylib/src/: font.c  font.h  main.c  palette.c  palette.h  sprite.c  sprite.h
shared/design/raylib/src/screens/: buttons_screen.c  buy_menu_screen.c  hud_screen.c  inputs_screen.c  lists_screen.c  lobby_screen.c  main_menu_screen.c  palette_screen.c  panels_screen.c  screens.h  toggles_screen.c  typography_screen.c
shared/design/raylib/src/widgets/: button.c  button.h  hud.c  hud.h  interface.c  interface.h  loading.c  loading.h  minimap.c  minimap.h  modal.c  modal.h  overlay.c  overlay.h  panel.c  panel.h  scrollbar.c  scrollbar.h  selectbox.c  selectbox.h  textbox.c  textbox.h  textinput.c  textinput.h  toggle.c  toggle.h
shared/design/sdl3/: CLAUDE.md  CMakeLists.txt
shared/design/sdl3/src/: dump_runner.cpp  dump_runner.h  font.cpp  font.h  main.cpp  palette.cpp  palette.h  screens.h  sprite.cpp  sprite.h
shared/design/sdl3/src/components/: button.cpp  button.h  character.cpp  character.h  chat.cpp  chat.h  gameselect.cpp  gameselect.h  header.cpp  header.h  modal.cpp  modal.h  panel.cpp  panel.h
shared/design/sdl3/src/screens/: demo_data.cpp  demo_data.h  lobby.cpp  lobby_connect.cpp  lobby_gamecreate.cpp  lobby_gamejoin.cpp  lobby_gamesummary.cpp  lobby_gametech.cpp  main_menu.cpp  main_menu.h  options.cpp  options_audio.cpp  options_controls.cpp  options_display.cpp  screen.h  screen_buttons.cpp  screen_buy_menu.cpp  screen_hud.cpp  screen_inputs.cpp  screen_loading.cpp  screen_lobby.cpp  screen_main_menu.cpp  screen_minimap.cpp  screen_modal.cpp  screen_overlay.cpp  screen_palette.cpp  screen_panel.cpp  screen_selectbox.cpp  screen_typography.cpp  updating.cpp
shared/design/sdl3/src/widgets/: button.cpp  button.h  hudbars.cpp  hudbars.h  interface.cpp  interface.h  loadingbar.cpp  loadingbar.h  minimap.cpp  minimap.h  modal.cpp  modal.h  overlay.cpp  overlay.h  panel.cpp  panel.h  primitives.cpp  primitives.h  scrollbar.cpp  scrollbar.h  selectbox.cpp  selectbox.h  textbox.cpp  textbox.h  textinput.cpp  textinput.h  toggle.cpp  toggle.h  widget.h
src/: CLAUDE.md  audio.cpp  game.cpp  game.h  lobby.cpp  main.cpp  mapfetch.cpp  mapfetch.h  os.cpp  player.cpp  renderer.cpp  selectbox.h  shared.h  stats.h  updaterdownload.cpp  updaterstage2.cpp  updaterstage2.h  world.cpp  world.h
terraform/: CLAUDE.md  cloud-init.yaml.tftpl  main.tf  terraform.tfvars.example  variables.tf
tests/: CMakeLists.txt  control_widget_test.cpp
(+526 files in other folders)
